# MDO_2026

./: Full_configuration_optimizer.py  multiMDO_0923.py  multiMDO_0924.py
PythonProject/: pyproject.toml
PythonProject/cache/: ag04.json  ag13.json  naca0008.json  naca0010.json  naca4412.json  sg6043.json
PythonProject/configs/: 00_arch.yaml  01_sweep.yaml  airfoils.yaml  constraints.yaml  mission.yaml  ranges.yaml  solver.yaml  weights.yaml
PythonProject/old_scripts/: 00_big_architecture_sweep.py  01_sweep_configs.py  02b_multi_optimize.py
PythonProject/results/: arch_selected_old.csv  config_wingA_AR6.5_tap0.5_dih10_tw2_-1_ag13.json  config_wingA_AR6.5_tap0.5_dih10_tw2_-1_naca4412.json  config_wingA_AR6.5_tap0.5_dih10_tw2_-1_sg6043.json  config_wingA_AR6.5_tap0.5_dih10_tw3_-2_ag13.json  config_wingA_AR6.5_tap0.5_dih10_tw3_-2_naca4412.json  config_wingA_AR6.5_tap0.5_dih10_tw3_-2_sg6043.json  config_wingA_AR6.5_tap0.5_dih5_tw2_-1_ag13.json  config_wingA_AR6.5_tap0.5_dih5_tw2_-1_naca4412.json  config_wingA_AR6.5_tap0.5_dih5_tw2_-1_sg6043.json  config_wingA_AR6.5_tap0.5_dih5_tw3_-2_ag13.json  config_wingA_AR6.5_tap0.5_dih5_tw3_-2_naca4412.json  config_wingA_AR6.5_tap0.5_dih5_tw3_-2_sg6043.json  config_wingA_AR6.5_tap0.7_dih10_tw2_-1_ag13.json  config_wingA_AR6.5_tap0.7_dih10_tw2_-1_naca4412.json  config_wingA_AR6.5_tap0.7_dih10_tw2_-1_sg6043.json  config_wingA_AR6.5_tap0.7_dih10_tw3_-2_ag13.json  config_wingA_AR6.5_tap0.7_dih10_tw3_-2_naca4412.json  config_wingA_AR6.5_tap0.7_dih10_tw3_-2_sg6043.json  config_wingA_AR6.5_tap0.7_dih5_tw2_-1_ag13.json  (+55 more)
(+18 files in other folders)
